# text_to_anki

./: CMakeLists.txt
src/: main.cpp  t2a_anki.cpp  t2a_anki.h  t2a_constants.h  t2a_engine.cpp  t2a_engine.h  t2a_sqlite.cpp  t2a_sqlite.h  t2a_utils.cpp  t2a_utils.h
templates/: anki2_default_sql_template.sql  anki2_default_sql_template.txt  default_conf.json  default_dconf.json  default_decks.json  default_models.json
test_files/: japanese.txt  japanese_reference_database.db  kokoro.txt  meian.txt  test.apkg  test_empty_anki2.apkg
